# actix_web_start

./: .gitignore  Cargo.toml  README.md  index.html  test_file.txt
src/: lib.rs  main.rs
src/http/: mod.rs  resource.rs  response.rs  test.rs
src/response/: mod.rs
src/util/: error.rs  middleware.rs  mod.rs  request.rs  session.rs  static_file.rs
src/websocket/: mod.rs
