[package]
name = "actix_web_start"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = { version = "4", features = ["openssl"] }
openssl = { version = "0.10" }
serde = { version = "1.0.188", features = ["derive"] }
derive_more = { version = "0.99.17", features = [] }
serde_json = "1"
futures = "0.3"
futures-util = { version = "0.3.28", features = [] }
env_logger = "0.10.0"